# hpc

./: .gitignore  CMakeLists.txt  README.md  draw_speedup.ipynb
lab1/: hello_world  mat_mult  mat_mult.cpp
lab2/: hello  hello_world.cpp  pi  pi.cpp  sk.py
lab3/julia/: gpujulia.cu
lab3/stencil/: diff.txt  stencil.cu  wyniki_stencil.txt
lab4/: ttime.cu  ttime.h
lab4/raytrace/: Makefile  raytrace.cu  results.txt  ttime.cu
lab4/synchro/: sharedsum.cu
lab5/plm/: plm.cu
lab5/streams/: single.cu
mpi-lab-02-e/: floyd-warshall-par.cpp  graph-utils-par.cpp
mpi-lab-03-e/: CMakeLists.txt  laplace-common.cpp  laplace-par.cpp  scatter-gather-max.cpp
zad1/: .gdb_history  .gitignore  Makefile  README.md  gpulouvain  gpulouvain.c  gpulouvain.cu  hasharray.cu  hasharray.h  modopt.cu  modopt.h  report.tex  seq.py  test.cu  utils.cu  utils.h
zad2/: .gitignore  CMakeLists.txt  Makefile  check_scaling.py  lol.sh  main  print_triples.py  report.tex
zad2/src/: Makefile  body.cpp  body.hpp  debug.cpp  main  main.cpp  types.hpp  utils.cpp  utils.hpp
zad2/tests/: part_4_sol_1.txt
